# open-webui-honcho

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker.yml
docker/: Dockerfile
functions/: honcho_memory_filter.py
prompts/: system_prompt.md
scripts/: build_filter.py
src/open_webui_honcho/: __init__.py  config.py  honcho_client.py  honcho_service.py  identity.py  tool_server.py
tests/: test_filter_helpers.py  test_identity.py  test_service_format.py
