[project]
name = "open-webui-honcho"
version = "0.1.0"
description = "Give Open WebUI the same Honcho shared-memory access (and recall/save behaviour) that Claude Code has."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Georgel Preput", email = "georgelpreput@mailbox.org" }]
dependencies = [
    "honcho-ai>=2.1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=3.6",
    "pip-audit>=2.7",
]

[project.scripts]
# Convenience entrypoint for the OpenAPI tool server.
owui-honcho-tools = "open_webui_honcho.tool_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_webui_honcho"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.ruff.format]
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
